--- a/component2/public/css/style.css
+++ b/component2/public/css/style.css
@@ -122,3 +122,27 @@
     display: block;
     margin-bottom: 1rem;
 }
+
+.title {
+    margin: 5rem 0 3rem 0;
+    text-align: center;
+}
+
+.title h2 {
+    font-size: 3rem;
+    display: inline-block;
+    position: relative;
+    z-index: 0;
+}
+
+.title h2::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -20%;
+    transform: translate(-50%, -50%);
+    background-color: #8739f9;
+    width: 50%;
+    height: 0.3rem;
+    z-index: 1;
+}
